--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Pocket Trainer</string>
     <string name="no_active_programs">No active programs</string>
+    <string name="recovery_day">Recovery day</string>
+    <string name="battery_icon">battery icon</string>
 </resources>
